# slickSDDM

./: CUSTOMIZATION.md  INTEGRATION.md  Makefile  README.md  TRANSLATION_QUICK_REFERENCE.md  TRANSLATION_WORKFLOW.md  budgie-sddm-display-setup  meson.build  meson.options  quick-setup-check.sh  slicksddm-customize  slicksddm-customize.1  slicksddm-customize.desktop  verify-structure.sh
.tx/: config
accounts/: INSTALLATION.md
data/: meson.build
docs/: DIRECTORY_STRUCTURE.md  KEYBOARD_LAYOUT_SETUP.md  TESTING_TRANSLATIONS.md  TRANSLATIONS.md  TRANSLATION_MAINTAINER_CHECKLIST.md  TRANSLATION_QUICK_REFERENCE.md  TRANSLATION_README.md  TRANSLATOR_QUICKSTART.md
scripts/: extract-strings.py  generate-default-faces.sh  translate-manager.py  tx-pull.sh  update-all-translations.sh
sddm-conf/: 50-ubuntu-budgie.conf  sddm.conf.in
sddm-theme/: Main.qml  metadata.desktop.in  theme.conf  theme.conf.example  theme.conf.in
sddm-theme/cache/: backgrounds-cache.md
sddm-theme/components/: AccountsService.qml  Avatar.qml  Config.qml  LayoutSelector.qml  LockScreen.qml  LoginScreen.qml  MenuArea.qml  SessionSelector.qml  TextConstants.qml  TranslationManager.qml  TranslationManager.qml.bak  UserSelector.qml  qmldir
sddm-theme/scripts/: update-sddm-backgrounds-cache  update-sddm-backgrounds-cache.in
sddm-theme/translations/: ca.json  de.json  de_DE.json  en.json  en_GB.json  es.json  et.json  fi.json  fr.json  fr_FR.json  he.json  nl_NL.json  oc.json  pt_BR.json  theme_ca.qm  theme_ca.ts  theme_de_DE.qm  theme_de_DE.ts  theme_en.ts  theme_en_GB.ts  theme_es.qm  theme_es.ts  theme_fi.qm  theme_fi.ts  theme_fr.qm  theme_fr.ts  theme_fr_FR.qm  theme_fr_FR.ts  theme_he.qm  theme_he.ts  theme_nl_NL.qm  theme_nl_NL.ts  theme_oc.qm  theme_oc.ts  theme_tr.qm  theme_tr.ts  tr.json
systemd/: sddm-backgrounds-cache.service.in
tests/: test_translations.py
